# csci447

./: main.py  pyproject.toml
assignments/: Assignment_0.html  Assignment_0.ipynb  Assignment_1.ipynb
examples/: Polynomial_Regression_Hackathon.ipynb
