[project]
name = "csci447"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipynb>=0.5.1",
    "islp>=0.4.0",
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
]
